2005-03-24  Jim Ingham  <jingham@apple.com>

        These changes allow us to draw the Entry and Spinbox widget
	with a native look and feel on Mac OS X.

	* generic/tkEntry.h: New file, extracting the definitions of
	Entry and Spinbox.
	* generic/tkEntry.c (DisplayEntry): Call out to
	TkpDrawEntryBorderAndFocus and TkpDrawSpinboxButtons.  Also
	provide default implementations for X11 & Win.
	* macosx/tkMacOSXEntry.c: New file, implements the entry & focus
	and spinbox button drawing.
	* tkMacOSXDefaults.h: Change the Mac OS X defaults so they fit
	the native widget shapes.
	
	* xlib/xgc.c (XCreateGC): Set the default linewidth to 1, not
	0.  Some extensions seem to expect this.
	
2005-03-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* unix/tcl.m4:    Updated for OpenBSD and regenerated the configure
	* unix/configure: script

2005-03-11  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXButton.c (TkpDisplayButton): Set the port to
	the Button window's port BEFORE you set the clip, otherwise you 
	are setting the clip on the wrong window!
	Also, a little cleanup - move x & y into the branches where they are
	used, and don't compute the TextAnchor if we are using the native 
	button text, since we aren't going to use it.
	(TkMacOSXDrawControl): Call ShowControl & SetControlVisibility in a more
	logical order.

	* tkMacOSXInt.h: Add TkMacOSXGenerateFocusEvent.
	* tkMacOSXSubwindows.c (XDestroyWindow): We don't get Activate events
	for the remaining windows when a Floating window is destroyed.  This 
	can cause the focus to disappear.  So catch this case when the window
	is being destroyed and move the focus here.
	* tkMacOSXWindowEvent.c (TkMacOSXGenerateFocusEvent): Make this public
	(used to be GenerateFocusEvent) since we need it here and in 
	tkMacOSXSubwindows.c.  Then change the name everywhere it is used.
	[Bug 1124237]
	
2005-03-10  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXMouseEvent.c (TkMacOSXProcessMouseEvent): In